# gpac-api

./: .bumpversion.cfg  .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.test.yaml  pyproject.toml  requirements.txt  unittest.sh
.github/workflows/: bump-version.yml  changelog.yml  ci.yml  configure-server.yml  deploy.yml
playbooks/: configure-server-dev-playbook.yml  deploy-dev-playbook.yml
src/: __init__.py
src/gpac_api/: __init__.py
src/gpac_api/app/: __init__.py  main.py
src/gpac_api/app/api/: __init__.py
src/gpac_api/app/api/endpoints/: __init__.py  gpu_data.py  notif.py  overview.py
src/gpac_api/app/crud/: __init__.py  gpu_data.py  notif.py  overview.py  user.py
src/gpac_api/app/db/: __init__.py  database.py
src/gpac_api/app/models/: __init__.py  date_models.py  gpu_data.py  notif.py  overview.py  user.py
src/gpac_api/app/schemas/: __init__.py  date.py  gpu_data.py  notif.py  overview.py  user.py
src/gpac_api/app/utils/: converters.py  envcheck.py  lifespan.py  logger.py  security.py  testenv.py
tests/: __init__.py  conftest.py  gpu_data_test.py  hostname_test.py  main_test.py  notif_test.py  overview_test.py
