[tool.poetry]
name = "gpac-api"
version = "0.1.0"
description = ""
authors = ["Mihamina Rakotovazaha <r.miham@yahoo.com>", "Stephane Vusasinovic stephane.vujasinovic@gmail.com"]
readme = "README.md"
packages = [{include = "gpac_api", from = "src"}]

[tool.poetry.scripts]
gpac-api = "uvicorn:gpac_api.main.app"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.112.0"}
logging = "^0.4.9.6"
setuptools = "^72.2.0"
motor = "^3.5.1"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
